additional spacing fixed for mobileee

--- a/src/index.css
+++ b/src/index.css
@@ -571,6 +571,12 @@ padding: 40px;}
     margin-bottom: calc(var(--spacing) * 8);
   }
 
+  @media (min-width: 600px) {
+    .mb-md-16 {
+      margin-bottom: calc(var(--spacing) * 16);
+    }
+  }
+
   .mb-10 {
     margin-bottom: calc(var(--spacing) * 10);
   }
